--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 bin/
 gen/
 out/
-.idea/
+*.DS_Store
 
 # Gradle files
 .gradle/
@@ -35,6 +35,7 @@ captures/
 
 # Intellij
 *.iml
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
